# Linux-Strike

./: .gitignore  BUILDING.md  BUILD_WINDOWS.md  CMakeLists.txt  CreateSolutionVPC.bat  README.md  build.bat  build_with_logs.bat
.github/workflows/: linux-strike-build.yml
appframework/: CMakeLists.txt  WinApp.cpp  sdlmgr.cpp
avi/: CMakeLists.txt  bink.cpp  quicktime.cpp  quicktime.h
bitmap/: CMakeLists.txt
bonesetup/: CMakeLists.txt
build_fixes/: intrin_workarounds.h
build_fixes/scripts/: extract_errors.ps1  fix_cmake_version.py  fixissues.ps1
choreoobjects/: CMakeLists.txt
cmake/: FindDirectX.cmake  detect_platform.cmake  protobuf_builder.cmake  source_dll_posix_base.cmake  source_posix_base.cmake  source_video_base.cmake
common/: imageutils.cpp
common/vgui/: HtmlWindow.h
common/vgui_surfacelib/: vguifont.h
common/xbox/: xboxstubs.h
datacache/: CMakeLists.txt
dedicated/: CMakeLists.txt  sys_windows.cpp
dedicated_main/: CMakeLists.txt
dmserializers/: CMakeLists.txt
dmxeditlib/: winstuff.cpp
dmxloader/: CMakeLists.txt
dx9sdk/include/: d3drmdef.h  medparam.h
engine/: bugreporter.cpp  console.cpp  engine_inc.cmake  host.cpp  host_phonehome.cpp  net_ws.cpp  rpt_engine.cpp  sv_main.cpp  sv_uploadgamestats.cpp  sys_dll.cpp  sys_dll2.cpp  sys_engine.cpp  sys_getmodes.cpp  sys_mainwind.cpp
engine/audio/private/: MPAFile.cpp  snd_dma.cpp
engine/voice_codecs/miles/: milesbase.cpp
engine/voice_codecs/minimp3/: CMakeLists.txt
fgdlib/: CMakeLists.txt
filesystem/: CMakeLists.txt  basefilesystem.cpp  filesystem_steam.cpp
game/client/: CMakeLists.txt  client_base.cmake  hud_closecaption.cpp  hud_lcd.h  in_mouse.cpp  mumble.cpp  physics_main_client.cpp  vgui_centerstringpanel.cpp
game/client/cstrike15/: cs_gc_client.cpp  cs_gc_client.h  cs_hud_weaponselection.cpp
game/client/cstrike15/gameui/: gameui_interface.cpp  optionssubmultiplayer.cpp
game/client/game_controls/: baseviewport.h
game/client/sixense/: in_sixense.cpp
game/server/: CMakeLists.txt  server_base.cmake
game/shared/cstrike15/: cs_workshop_manager.h
gcsdk/: CMakeLists.txt
gcsdk/steamextra/: rtime.h
inputsystem/: CMakeLists.txt  inputsystem.cpp  inputsystem.h
interfaces/: CMakeLists.txt
ivp/havana/havok/hk_base/: CMakeLists.txt  console.cpp
ivp/havana/havok/hk_math/: CMakeLists.txt
ivp/ivp_compact_builder/: 3dsimport_co.cxx  CMakeLists.txt  ivp_surbuild_pointsoup.cxx  ivp_template_surbuild.hxx
ivp/ivp_intern/: ivp_environment.cxx  ivp_sim_unit.cxx  ivp_time.cxx
ivp/ivp_physics/: CMakeLists.txt  ivp_performancecounter.cxx  ivp_performancecounter.hxx
ivp/ivp_utility/: ivu_float.hxx  ivu_linear.hxx  ivu_os_dep.cxx  ivu_string.cxx  ivu_string.hxx  ivu_types.hxx
launcher/: CMakeLists.txt  launcher.cpp
launcher_main/: CMakeLists.txt  main.cpp
lib/common/vc14/: lzma.lib
localize/: CMakeLists.txt
matchmaking/: CMakeLists.txt  matchmaking_base_inc.cmake  matchmaking_cstrike15_inc.cmake  matchsystem.cpp
materialsystem/: CMakeLists.txt  ctexture.cpp
materialsystem/shaderapidx9/: CMakeLists.txt  d3d_async.cpp  dxabstract.h  shaderapidx8.cpp
materialsystem/shaderapiempty/: CMakeLists.txt
materialsystem/shaderlib/: CMakeLists.txt
materialsystem/stdshaders/: CMakeLists.txt
mathlib/: CMakeLists.txt
meshutils/: CMakeLists.txt
particles/: CMakeLists.txt
public/: ati_compress.h  filesystem_init.cpp  registry.cpp  zip_utils.cpp
public/avi/: ibik.h
public/libpng/: pnglibconf.h
public/mxtk/: gl.h  mx.h  mxbmp.h  mxinit.h
public/p4lib/: ip4.h
public/soundsystem/: mpafile.cpp
public/tier0/: basetypes.h  memoverride.cpp  platform.h  threadtools.h  threadtools.inl  vprof_telemetry.h
public/tier1/: fileio.h  utlsymbol.h
public/togl/: rendermechanism.h
public/wintab/: readme.txt
public/wintab/examples/cadtest/: cadtest.c
public/wintab/examples/mgrtest/: mgrtest.c  tests.c
public/wintab/examples/rule2/: msgpack.h
public/wintab/include/: wintab.h  wintabx.h
raytrace/: CMakeLists.txt
resourcefile/: CMakeLists.txt
responserules/runtime/: CMakeLists.txt
scaleformui/scaleformuiimpl/: scaleformuivalueimpl.cpp
scenefilecache/: CMakeLists.txt
serverbrowser/: CMakeLists.txt  pch_serverbrowser.h
soundemittersystem/: CMakeLists.txt
soundsystem/: CMakeLists.txt
soundsystem/lowlevel/: CMakeLists.txt
studiorender/: CMakeLists.txt
tier0/: CMakeLists.txt  dynfunction.cpp  threadtools.cpp
tier0/dlmalloc/: malloc.cpp
tier1/: CMakeLists.txt  appinstance.cpp  fileio.cpp  keyvalues.cpp  strtools.cpp
tier2/: CMakeLists.txt
tier3/: CMakeLists.txt
togl/: CMakeLists.txt  glmgr.cpp  glmgrbasics.cpp
utils/binlaunch/: binlaunch.cpp
utils/bzip2/: CMakeLists.txt
utils/common/: cmdlib.cpp  cmdlib.h  scriplib.cpp
utils/hlfaceposer/: mdlviewer.cpp
utils/hlmv/: controlpanel.cpp  fileassociation.cpp  mdlviewer.cpp  pakviewer.cpp
utils/jpeglib/: CMakeLists.txt
utils/mxtk/: mxpath.cpp  mxstring.cpp
utils/shadercompile/: CMakeLists.txt  shadercompile.cpp
utils/shadercompile_launcher/: CMakeLists.txt
utils/vbsp/: vbsp.cpp  vbsp.h
utils/vbspinfo/: vbspinfo.cpp
utils/vmpi/: CMakeLists.txt  vmpi_distribute_work_default.cpp  vmpi_distribute_work_internal.h  vmpi_filesystem.cpp
utils/vpc/: main.cpp  projectgenerator_xcode.cpp  solutiongenerator_xcode.cpp
utils/vpc/vpc/: main.cpp  solutiongenerator_xcode.cpp
utils/vrad/: vrad.cpp
utils/vtex/: vtex.cpp
utils/vvis/: vvis.cpp
vgui2/matsys_controls/: CMakeLists.txt  QCGenerator.cpp  gamefiletreeview.cpp
vgui2/src/: CMakeLists.txt  InputWin32.cpp  Surface.cpp  vgui.cpp  vgui_key_translation.cpp
vgui2/vgui_controls/: CMakeLists.txt  DirectorySelectDialog.cpp  FileOpenDialog.cpp  Panel.cpp
vgui2/vgui_surfacelib/: CMakeLists.txt  fontmanager.cpp
vguimatsurface/: CMakeLists.txt  Cursor.cpp  MatSystemSurface.cpp
videocfg/: CMakeLists.txt
vpc_scripts/: projects.vgc
vphysics/: CMakeLists.txt  trace.cpp
vpklib/: CMakeLists.txt
vscript/: CMakeLists.txt
vstdlib/: CMakeLists.txt  coroutine.cpp  jobthread.cpp
vtf/: CMakeLists.txt
(+4 files in other folders)
